# Optimal-GPM

./: .gitignore  ARTIFACT-EVALUATION.md  L1_distance.py  LICENSE  PM.py  README.md  SW.py  min_error_mechanism.py  pyproject.toml  wasserstein_distance.py
Temporary Code/: MSE_testing.py  extended_piecewise.py
experiments/: banner_image.py  figure_sec_3.csv  figure_sec_4.py  reproduction_theoretical.ipynb  wasserstein_comparison.csv  wasserstein_comparison.py
experiments/experimental/: distribution_circular.csv  distribution_circular.py  distribution_classical.csv  distribution_classical.py  (+15 more)
figures/: 345_piece_example.txt  345_piece_example_l1.py
optimal_for_L_1/: debug.ilp  m_optimal_L1.py  m_optimal_L1_delta.py
optimal_for_Wasserstein/: m_optimal_Wasserstein.py
others/: comparison_laplace.py  draw_optimal_epsilon_assignment.py  optimal_epsilon_assignment.py  solve_at_other_x.py  truncate_laplace.py
recycle_bin/: ML_based_attack.py  bounded_numeric_DP_para_k.py  m_optimal_Wasserstein.py
reproduction/: figure_12.py  figure_13_15.py  figure_16_17.py  figure_8_11.py
src/: PM.py  README.md  SW.py  closed_form_mechanism.py  distance_metric.py  min_error_mechanism.py  utilities.py
tests/: ablation_l2.py  test_L2.py  test_circular_closed_form.py  test_circular_l1.py  test_error_mechanism.py  test_print_mechanisms.py
tmp/: dis_realData.py  dis_relativeE.py
validations/: 345_piece_example_l1.py  345_piece_example_wasserstein.py  compare_mse.py  example_l1_circular.py  figure_345_piece.py  print_mechanisms.py  print_mechanisms_mse.py  theorem_circular.py
(+90 files in other folders)
